# Google-Image-Scraper

./: .gitignore  BingImageScrapper.py  GettyImagesScrapper.py  GoogleImageScraper.py  GoogleImageScrapper.py  README.md  ShutterstockImagesScrapper.py  google_site_scrapper.py  googleimagescraper_cli.py  juypter_main.ipynb  main.py  patch.py  pyproject.toml  requirements.txt  test_google.py  yaab_test.py
.ipynb_checkpoints/: juypter_main-checkpoint.ipynb
input/: products.txt
services/: gdrive_service.py  gspread_service.py  openai_service.py
webdriver/: webdriver-README.txt
yaab/: yaab_store.py
yaab/api_models/: models.py
yaab/gpt_models/: models.py
yaab/inventory_models/: models.py
